# cfb-mode-ex

./: Cargo.toml
src/: bitbufdec.rs  bitbufenc.rs  bufdec.rs  bufenc.rs  decrypt.rs  encrypt.rs  errors.rs  lib.rs  logger.rs  no_std_errors.rs  no_std_logger.rs  std_errors.rs  std_logger.rs
utest/utest/: Cargo.toml
utest/utest/src/: impls.rs  main.rs  tstaes.rs
